Fixed clicking issue on mobiles (toggle)

--- a/src/components/Main/ToggleStyles.css
+++ b/src/components/Main/ToggleStyles.css
@@ -15,6 +15,7 @@ span{
 
 .label {
     pointer-events: none;
+    -webkit-tap-highlight-color: transparent;
 }
 
 .input {
